--- a/TRNApp/Assets/css/templatemo-style.css
+++ b/TRNApp/Assets/css/templatemo-style.css
@@ -295,3 +295,164 @@ p {
             color: #fff;
             font-weight: 600;
         }
+
+/* Login button */
+
+.login {
+    color: #fff !important;
+    text-transform: uppercase;
+    text-decoration: none;
+    background: #3496d8;
+    padding: 20px;
+    border-radius: 5px;
+    display: inline-block;
+    border: none;
+    transition: all 0.4s ease 0s;
+}
+
+    .login:hover {
+        background: #434343;
+        letter-spacing: 1px;
+        -webkit-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
+        -moz-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
+        box-shadow: 5px 40px -10px rgba(0,0,0,0.57);
+        transition: all 0.4s ease 0s;
+    }
+
+/* Admin form */
+
+#news-text {
+    width: 440px;
+    height: 180px;
+    border: 1px solid #999999;
+    padding: 5px;
+}
+
+
+.admin-btn-wrap {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.add-news-button {
+    width: 140px;
+    height: 45px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 11px;
+    text-transform: uppercase;
+    letter-spacing: 2.5px;
+    font-weight: 500;
+    color: #000;
+    background-color: #fff;
+    border: none;
+    border-radius: 45px;
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease 0s;
+    cursor: pointer;
+    outline: none;
+}
+
+.add-news-button:hover {
+    background-color: #2EE59D;
+    box-shadow: 0px 15px 20px rgba(46, 229, 157, 0.4);
+    color: #fff;
+    transform: translateY(-7px);
+}
+/* end lol */
+
+body {
+    font-size: 20px;
+    font-family: system-ui, Helvetica, Arial, sans-serif;
+}
+
+form {
+    width: 400px;
+    margin: 20px auto;
+}
+
+fieldset {
+    position: relative;
+    border: none;
+}
+
+label {
+    position: absolute;
+    top: 18px;
+    color: rgba(0, 0, 0, 0.3);
+    transform-origin: left;
+    transition: all 0.3s ease;
+}
+
+input:focus ~ label {
+    color: red;
+}
+
+input:focus ~ label,
+input:valid ~ label {
+    top: 0;
+    transform: scale(0.6, 0.6);
+}
+
+input {
+    font-size: 20px;
+    width: 100%;
+    border: none;
+    margin-top: 10px;
+}
+
+    input:focus {
+        outline: none;
+    }
+
+.after {
+    width: 100%;
+    height: 2px;
+    background: linear-gradient(to right, red 50%, transparent 50%);
+    background-color: rgba(0, 0, 0, 0.3);
+    background-size: 200% 100%;
+    background-position: 100% 0;
+    transition: all 0.6s ease;
+}
+
+input:focus ~ .after {
+    background-position: 0 0;
+}
+
+button {
+    position: relative;
+    width: 100%;
+    font-size: 20px;
+    font-family: system-ui, Helvetica, Arial, sans-serif;
+    line-height: 1.5;
+    margin-top: 20px;
+    padding: 2px 10px;
+    color: rgba(0, 0, 0, 0.4);
+    background: white;
+    border: none;
+    background: linear-gradient(to right, red 50%, transparent 50%);
+    background-color: rgba(0, 0, 0, 0.3);
+    background-size: 200% 100%;
+    background-position: 100% 0;
+    transition: all 0.6s ease;
+}
+
+    button:before {
+        position: absolute;
+        content: "Submit";
+        top: 2px;
+        bottom: 2px;
+        left: 2px;
+        right: 2px;
+        display: block;
+        background-color: white;
+    }
+
+    button:active,
+    button:focus,
+    button:hover {
+        outline: none;
+        background-position: 0 0;
+        color: red;
+    }
